--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -2,9 +2,9 @@
   <div class="col-md-3"></div>
   <div class="col-md-6">
     <div class="btn-group">
-      <%= link_to "All", bookings_path, :class => "btn btn-#{active_action('bookings/index')}" %>
-      <%= link_to "Today", todays_bookings_path, :class => "btn btn-#{active_action('bookings/todays')}" %>
-      <%= link_to "Upcoming", upcoming_bookings_path, :class => "btn btn-#{active_action('bookings/upcoming')}" %>
+      <%#= link_to "All", bookings_path, :class => "btn btn-#{active_action('bookings/index')}" %>
+      <%#= link_to "Today", todays_bookings_path, :class => "btn btn-#{active_action('bookings/todays')}" %>
+      <%#= link_to "Upcoming", upcoming_bookings_path, :class => "btn btn-#{active_action('bookings/upcoming')}" %>
     </div>
   </div>
 </div>
@@ -12,34 +12,38 @@
 <div class="container">
   <div class="row">
     <div class="col-md-8">
-      <%if @booked_room_list.present? %>
-      <table class="table table-bordered table-hover display" id=
-      "upcoming_table">
-        <thead>
-          <tr style="background-color: #EEE;">
-            <th>Meeting Room</th>
-            <th>Booked By</th>
-            <th>From</th>
-            <th>To</th>
-          </tr>
-        </thead>
-        <tbody>
-          <%@booked_room_list.each do |room|%>
-          <tr class="<%= row_class(room) %>">
-            <td><%=room.meeting_room.name%></td>
-            <td><%=room.user.name%></td>
-            <td style="font-weight: bold">
-            <%=room.starts_at.strftime("%d/%m/%Y at %H:%M %p")%></td>
-            <td style="font-weight: bold">
-            <%=room.ends_at.strftime("%d/%m/%Y at %H:%M %p")%></td>
-          </tr><%end%>
-        </tbody>
-      </table><%else%>
-      <div class="border-width">
-        <div style="text-align: center">
-          <h2>No Bookings to display</h2>
-        </div>
-      </div><%end%>
+      <%#if @booked_room_list.present? %>
+        <!-- <table class="table table-bordered table-hover display" id=
+        "upcoming_table">
+          <thead>
+            <tr style="background-color: #EEE;">
+              <th>Meeting Room</th>
+              <th>Booked By</th>
+              <th>From</th>
+              <th>To</th>
+            </tr>
+          </thead>
+          <tbody>
+            <%#@booked_room_list.each do |room|%>
+            <tr class="<%#= row_class(room) %>">
+              <td><%#=room.meeting_room.name%></td>
+              <td><%#=room.user.name%></td>
+              <td style="font-weight: bold">
+              <%#=room.starts_at.strftime("%d/%m/%Y at %H:%M %p")%></td>
+              <td style="font-weight: bold">
+              <%#=room.ends_at.strftime("%d/%m/%Y at %H:%M %p")%></td>
+            </tr><%#end%>
+          </tbody>
+        </table> -->
+      <%#else%>
+        <!-- <div class="border-width">
+          <div style="text-align: center">
+            <h2>No Bookings to display</h2>
+          </div>
+        </div> -->
+      <%#end%>
+   
+      <div id='calendar'></div>
     </div>
     <div class="col-md-4 foo book">
       <h1><span class="glyphicon glyphicon-hand-right"></span> &nbsp;Book
@@ -63,7 +67,7 @@
         <%= f.text_field :ends_at, :required => true, :id => 'datetimepicker_end',:placeholder => "End's at", :class => "form-control mrg-top"%>
       </div>
       <div class="row-padding">
-        <%= f.text_area :agenda, :required => true, :placeholder => "Agenda (Optional)", :class => "form-control mrg-top", :rows => "3"%>
+        <%= f.text_area :agenda, :placeholder => "Agenda (Optional)", :class => "form-control mrg-top", :rows => "3"%>
       </div>
       <div class="row-padding mrg-btm">
         <%=f.submit 'Book The Room', :id => "book_room", :class => ["btn", "btn-danger", "mrg-top"] , data: {disable_with: "Checking Availabilty.."}%>
@@ -71,3 +75,5 @@
     </div>
   </div>
 </div>
+
+
