added jquery.growl for displaying flash message

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,6 +21,7 @@
  @import "bootstrap";
  @import 'bootstrap-datetimepicker';
  @import 'bootstrap-multiselect';
+ @import  'jquery.growl';
 
  #calendar {
 		max-width: 900px;
